# MikroTik-SNMPv2c-Zabbix-Template-64-bit-Counters-

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LEGAL.md  QUICKSTART.md  README.md  README.ru.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  template_mikrotik_snmpv2c_advanced_zbx72.xml  template_mikrotik_snmpv2c_zbx72_uuid32.xml  template_mikrotik_snmpv3_advanced_zbx72.xml
.github/: AI_ASSISTANT_GUIDE.md  COPILOT_INSTRUCTIONS.md  README.md  README.ru.md
.github/workflows/: ci.yml  codeql.yml  security.yml  validate-templates.yml
ai_providers/: base.py  mock_provider.py  openai_provider.py
blueprints/: README.md
blueprints/ai/: blueprint_ai_adapter.py
blueprints/docs/: topology-overview.md
config/: electricity.example.yaml  optimizer.example.yaml
examples/: README.md  mikrotik_snmp_config.rsc  zabbix_host_config_example.md
node-exporter-full-stack/: README.md  docker-compose.yml
node-exporter-full-stack/alerts/: node-exporter-alerts.yml
node-exporter-full-stack/prometheus/: prometheus.yml
optimizer/: README.md
optimizer/homelab_cost_optimizer/: __init__.py  cli.py  config.py  models.py
scripts/: format.sh  lint.sh  perf_check.sh  security_scan.sh
tests/: README.md  conftest.py  run_checks.sh  test_oids.sh  test_templates.py  validate_xml.py
tests/integration/: test_optimizer_workflow.py  test_terraform_blueprint_scaffolding.py
tests/unit/: test_blueprint_ai_adapter.py  test_cli.py  test_collectors.py  test_consolidators.py  test_estimators.py  (+1 more)
typer/: __init__.py  testing.py
(+48 files in other folders)
