[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homelab-cost-optimizer"
version = "0.1.0"
description = "Homelab blueprints and cost optimization toolkit"
readme = "README.md"
authors = [{name = "run-as-daemon", email = "contact@run-as-daemon.ru"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9",
  "pyyaml>=6.0",
  "rich>=13.0",
]

[project.optional-dependencies]
tests = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[tool.setuptools.packages.find]
where = ["optimizer"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "UP"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = ["tests"]
