[metadata]
name = homelab-cost-optimizer
version = 0.1.0
description = Homelab blueprints and cost optimizer
license = Apache-2.0

[options]
packages = find:
python_requires = >=3.10
install_requires =
    typer>=0.9
    pyyaml>=6.0
    rich>=13.0

[options.packages.find]
where = optimizer

[flake8]
max-line-length = 100
extend-ignore = E203, W503

[coverage:run]
branch = True
source = optimizer/homelab_cost_optimizer
